--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
           </li>
 
           <li class="menu-category">
-            <a href="#" class="menu-title">Women's</a>
+            <a href="#" class="menu-title">Green Fuel</a>
 
             <ul class="dropdown-list">
 
