--- a/index.html
+++ b/index.html
@@ -380,48 +380,88 @@
           </li>
 
           <li class="menu-category">
-            <a href="#" class="menu-title">Men's</a>
-
+            <a href="#" class="menu-title">Electrical</a>
+            
             <ul class="dropdown-list">
 
               <li class="dropdown-item">
-                <a href="#">Shirt</a>
+                <a href="#">Wires & Cables</a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Shorts & Jeans</a>
+                <a href="#">Switchgear</a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Safety Shoes</a>
+                <a href="#">Digital Meter</a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Wallet</a>
+                <a href="#">Contractors</a>
+              </li>
+
+              <li class="dropdown-item">
+                <a href="#">Sinova</a>
+              </li>
+
+              <li class="dropdown-item">
+                <a href="#">MCB & DB</a>
+              </li>
+
+              <li class="dropdown-item">
+                <a href="#">MCCB & Control</a>
               </li>
 
             </ul>
           </li>
 
           <li class="menu-category">
-            <a href="#" class="menu-title">Green Fuel</a>
+            <a href="#" class="menu-title">Building & Construction Supplies</a>
 
             <ul class="dropdown-list">
 
               <li class="dropdown-item">
-                <a href="#">Dress & Frock</a>
+                <a href="#">Faucets</a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Earrings</a>
+                <a href="#">Sinks</a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Necklace</a>
+                <a href="#">Paints</a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Makeup Kit</a>
+                <a href="#">Showers</a>
+              </li>
+
+              <li class="dropdown-item">
+                <a href="#">Locks</a>
+              </li>
+
+              <li class="dropdown-item">
+                <a href="#">Door Hardware</a>
+              </li>
+
+              <li class="dropdown-item">
+                <a href="#">Sanitary Ware</a>
+              </li>
+
+              <li class="dropdown-item">
+                <a href="#">Plumbing Combo Kits</a>
+              </li>
+
+              <li class="dropdown-item">
+                <a href="#">Bathroom Fixtures</a>
+              </li>
+
+              <li class="dropdown-item">
+                <a href="#">Surface Protection & Additives</a>
+              </li>
+
+              <li class="dropdown-item">
+                <a href="#">Glues & Cements</a>
               </li>
 
             </ul>
