--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           </li>
 
           <li class="menu-category">
-            <a href="#" class="menu-title">Categories</a>
+            <a href="#" class="menu-title">Additional</a>
 
             <div class="dropdown-panel">
 
@@ -277,7 +277,7 @@
               <ul class="dropdown-panel-list">
 
                 <li class="menu-title">
-                  <a href="#">Electrical</a>
+                  <a href="#">Subcategory</a>
                 </li>
 
                 <li class="panel-list-item">
@@ -3606,7 +3606,7 @@
         <img src="./assets/images/payment.png" alt="payment method" class="payment-img">
 
         <p class="copyright">
-          Copyright &copy; <a href="#">Anon</a> all rights reserved.
+          Copyright &copy; <a href="#">Industry Bazaar</a> all rights reserved.
         </p>
 
       </div>
