--- a/index.html
+++ b/index.html
@@ -235,34 +235,34 @@
           </li>
 
           <li class="menu-category">
-            <a href="#" class="menu-title">Additional</a>
+            <a href="#" class="menu-title">Additional Items</a>
 
             <div class="dropdown-panel">
 
               <ul class="dropdown-panel-list">
 
                 <li class="menu-title">
-                  <a href="#">Electronics</a>
+                  <a href="#">Subcategory</a>
                 </li>
 
                 <li class="panel-list-item">
-                  <a href="#">Desktop</a>
+                  <a href="#">Category 1</a>
                 </li>
 
                 <li class="panel-list-item">
-                  <a href="#">Laptop</a>
+                  <a href="#">Category 2</a>
                 </li>
 
                 <li class="panel-list-item">
-                  <a href="#">Camera</a>
+                  <a href="#">Category 3</a>
                 </li>
 
                 <li class="panel-list-item">
-                  <a href="#">Tablet</a>
+                  <a href="#">Category 4</a>
                 </li>
 
                 <li class="panel-list-item">
-                  <a href="#">Headphone</a>
+                  <a href="#">Category 5</a>
                 </li>
 
                 <li class="panel-list-item">
