--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </p>
 
       <p class="toast-title">
-        Rose Gold Earrings
+        Water Pump
       </p>
 
       <p class="toast-meta">
@@ -642,7 +642,7 @@
         <li class="menu-category">
 
           <button class="accordion-menu" data-accordion-btn>
-            <p class="menu-title">Jewelry</p>
+            <p class="menu-title">Safety & Tools</p>
 
             <div>
               <ion-icon name="add-outline" class="add-icon"></ion-icon>
@@ -653,20 +653,18 @@
           <ul class="submenu-category-list" data-accordion>
 
             <li class="submenu-category">
-              <a href="#" class="submenu-title">Earrings</a>
+              <a href="#" class="submenu-title">Hand Tools</a>
             </li>
 
             <li class="submenu-category">
-              <a href="#" class="submenu-title">Couple Rings</a>
+              <a href="#" class="submenu-title">Power Tools</a>
             </li>
 
             <li class="submenu-category">
-              <a href="#" class="submenu-title">Necklace</a>
+              <a href="#" class="submenu-title">Safety Equipment</a>
             </li>
 
-            <li class="submenu-category">
-              <a href="#" class="submenu-title">Bracelets</a>
-            </li>
+            
 
           </ul>
 
